# NeonTri-interview-task

./: .gitignore  CMakeLists.txt  README.txt
debug/googletest/: CTestTestfile.cmake
debug/googletest/googlemock/: CTestTestfile.cmake
debug/googletest/googlemock/gtest/: CTestTestfile.cmake
include/: TransactionStore.h  TransactionStoreExceptions.h  TransactionStoreV2.h
src/: Tests.cpp  TransactionStore.cpp  TransactionStoreV2.cpp  TransactionStoreV2.h  main.cpp
